stretch done: deployed to netlify at https://todoapp-squarerobin.netlify.com/ - bug fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,7 @@
    
     text-decoration: line-through;
 }
+
+.clear-btn{
+    
+}
